# PulseTrace

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  engine.py  kafka_consumer.py  main.py  models.py  persistence.py  secrets.py  service.py  simulator.py  state.py
backend/app/pulse_trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: chaos_kill_kafka.sh  redis_backup.sh  vault-init.sh  wait-for-deps.sh
backend/tests/: test_contract.py  test_engine.py  test_kafka_consumer.py  test_main.py  test_persistence.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/e2e/: playwright.config.ts
frontend/e2e/tests/: basic.spec.ts
frontend/src/: App.tsx  api.ts  icons.tsx  styles.css  types.ts
frontend/src/components/: MetricCard.tsx  Sidebar.tsx  Timeline.tsx
grafana/dashboards/: pulse-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
k8s/: backend-deployment.yaml  services-and-frontend.yaml
otel/: collector-config.yaml
perf/: k6-load.js
prometheus/: alert_rules.yml  prometheus.yml
schemas/: message.json
