[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-trace"
version = "0.1.0"
description = "PulseTrace audit sidecar for event-driven systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "redis>=5.0",
  "aiokafka>=0.10",
  "prometheus-client>=0.16",
  "opentelemetry-api>=1.13",
  "opentelemetry-sdk>=1.13",
  "opentelemetry-exporter-otlp>=1.13",
  "opentelemetry-instrumentation-fastapi>=0.40",
  "opentelemetry-instrumentation-redis>=0.40",
]

[project.optional-dependencies]
vault = ["requests>=2.28"]
logging = ["python-json-logger>=2.0"]
redis = ["redis>=5.0"]
kafka = ["aiokafka>=0.10"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]
test = ["jsonschema>=4.0"]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
